Search from layout issue

--- a/themes/os2dagsorden_theme_ballerup/css/global_ballerup.css
+++ b/themes/os2dagsorden_theme_ballerup/css/global_ballerup.css
@@ -61,6 +61,9 @@ body {
 .views-meeting-search-field-commitee {
   width: 18%;
 }
+.region-content.grid-18 #edit-field-os2web-meetings-committee-tid-depth-wrapper {
+  width: 15%;
+}
 @media screen and (max-width: 300px) {
 
   .not-front #region-content {
