--- a/themes/os2dagsorden_theme_ballerup/css/os2dagsorden-theme-ballerup-alpha-default-narrow.css
+++ b/themes/os2dagsorden_theme_ballerup/css/os2dagsorden-theme-ballerup-alpha-default-narrow.css
@@ -18,3 +18,6 @@
   top: 0;
   width: auto;
 }
+.region-content.grid-18 #edit-field-os2web-meetings-committee-tid-depth-wrapper {
+  width: 15%;
+}
